# langchain

./: pyproject.toml
1-langgraph-basics/: 5-chain.py
3-Debugging/: openai_agent.py
3-Debugging/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
3.2-DataIngestion/: 3.2-DataIngestion.ipynb
3.3-Data_Transformer/: 3.3-text-splitter.ipynb
3.4-Embeddings/: embedding.ipynb  huggingface.py  ollamaEmbedding.ipynb
Data_Transformer/: 3.3-text-splitter.ipynb  HTMLtextsplitter.ipynb  Recursive-json-splitter.ipynb
Embeddings/: embedding.ipynb  ollama-embeddings.py
chatbot-with-langchain/: server.py
langgraph/: 4-pydantic.py  5-chain.py  6-chatbot-with-multiple-tools.py  7-ReAct-agents.py  app.py  chatbot.py  data-class-state-schema.py  simple-graph.py
langgraph-Advance/: 1.streaming.py
langgraph/1-langgraph-basics/: 6-chatbot-with-multiple-tools.py
langgraph/2-langgraph-Advance/: 1.streaming.py
langgraph/3-Debugging/: openai_agent.py
langgraph/3-Debugging/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
langgraph/4-workflows/: 1-prompt-chaining.py  2-parallelization.py  3-Routing.py  4-orchestrator-worker.py  5-Evaluator-optimizer.py
langgraph/5-Human-in the -loop/: 1-human-in-theloop.py
llm-LCEL/: server.py
ollama/: app.py
openai/: index.py  langchain_rag_app.py
vector-retriever/: app.py
vector-store/: Faiss.py  anime.txt  chroma.py
vector-store/chroma_db/: chroma.sqlite3
vector-store/faiss_index/: index.faiss  index.pkl
